--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@
 # $ conda create --name <env> --file <this file>
 # platform: win-64
 asgiref=3.4.1=pyhd3eb1b0_0
-ca-certificates=2022.9.24=h5b45459_0
-certifi=2022.9.24=pyhd8ed1ab_0
+ca-certificates=2022.4.26=haa95532_0
+certifi=2022.6.15=py39haa95532_0
 django=3.2.5=pyhd3eb1b0_0
 djangorestframework=3.14.0=pyhd8ed1ab_0
 libpq=12.9=hb652d5d_3
-openssl=1.1.1l=h8ffe710_0
+openssl=1.1.1o=h2bbff1b_0
 pip=22.2.2=py39haa95532_0
 psycopg2=2.8.6=py39hcd4344a_1
+pyodbc=4.0.32=py39hd77b12b_1
 python=3.9.0=h6244533_2
 pytz=2022.1=py39haa95532_0
 setuptools=65.5.0=py39haa95532_0
