--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,24 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-asgiref=3.4.1=pyhd3eb1b0_0
 ca-certificates=2022.4.26=haa95532_0
 certifi=2022.6.15=py39haa95532_0
-django=3.2.5=pyhd3eb1b0_0
-djangorestframework=3.14.0=pyhd8ed1ab_0
-libpq=12.9=hb652d5d_3
+click=8.0.4=py39haa95532_0
+colorama=0.4.4=pyhd3eb1b0_0
+dataclasses=0.8=pyh6d0b6a4_7
+flask=2.0.3=pyhd3eb1b0_0
+itsdangerous=2.0.1=pyhd3eb1b0_0
+jinja2=3.0.3=pyhd3eb1b0_0
+markupsafe=2.1.1=py39h2bbff1b_0
 openssl=1.1.1o=h2bbff1b_0
 pip=22.2.2=py39haa95532_0
-psycopg2=2.8.6=py39hcd4344a_1
 pyodbc=4.0.32=py39hd77b12b_1
 python=3.9.0=h6244533_2
-pytz=2022.1=py39haa95532_0
 setuptools=65.5.0=py39haa95532_0
 sqlite=3.40.0=h2bbff1b_0
-sqlparse=0.4.1=py_0
-typing_extensions=4.1.1=pyh06a4308_0
 tzdata=2022f=h04d1e81_0
 vc=14.2=h21ff451_1
 vs2015_runtime=14.27.29016=h5e58377_2
+werkzeug=2.0.3=pyhd3eb1b0_0
 wheel=0.37.1=pyhd3eb1b0_0
 wincertstore=0.2=py39haa95532_2
-zlib=1.2.12=h8cc25b3_2
