--- a/requirements.txt
+++ b/requirements.txt
@@ -3,22 +3,24 @@
 # platform: win-64
 ca-certificates=2022.4.26=haa95532_0
 certifi=2022.6.15=py39haa95532_0
-click=8.0.4=py39haa95532_0
-colorama=0.4.4=pyhd3eb1b0_0
-dataclasses=0.8=pyh6d0b6a4_7
-flask=2.0.3=pyhd3eb1b0_0
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jinja2=3.0.3=pyhd3eb1b0_0
-markupsafe=2.1.1=py39h2bbff1b_0
+click=8.1.3=win_pyhd8ed1ab_2
+colorama=0.4.6=pyhd8ed1ab_0
+flask=2.2.2=pyhd8ed1ab_0
+importlib-metadata=5.1.0=pyha770c72_0
+itsdangerous=2.1.2=pyhd8ed1ab_0
+jinja2=3.1.2=pyhd8ed1ab_1
+markupsafe=2.1.1=py39hb82d6ee_1
 openssl=1.1.1o=h2bbff1b_0
 pip=22.2.2=py39haa95532_0
 pyodbc=4.0.32=py39hd77b12b_1
 python=3.9.0=h6244533_2
+python_abi=3.9=2_cp39
 setuptools=65.5.0=py39haa95532_0
 sqlite=3.40.0=h2bbff1b_0
 tzdata=2022f=h04d1e81_0
 vc=14.2=h21ff451_1
 vs2015_runtime=14.27.29016=h5e58377_2
-werkzeug=2.0.3=pyhd3eb1b0_0
+werkzeug=2.2.2=pyhd8ed1ab_0
 wheel=0.37.1=pyhd3eb1b0_0
 wincertstore=0.2=py39haa95532_2
+zipp=3.11.0=pyhd8ed1ab_0
