--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-ca-certificates=2022.4.26=haa95532_0
-certifi=2022.6.15=py39haa95532_0
+ca-certificates=2022.9.24=h5b45459_0
+cachelib=0.9.0=pyhd8ed1ab_0
+certifi=2022.9.24=pyhd8ed1ab_0
 click=8.1.3=win_pyhd8ed1ab_2
 colorama=0.4.6=pyhd8ed1ab_0
 flask=2.2.2=pyhd8ed1ab_0
+flask-caching=2.0.1=pyhd8ed1ab_0
 flask-cors=3.0.10=pyhd3eb1b0_0
 importlib-metadata=5.1.0=pyha770c72_0
 itsdangerous=2.1.2=pyhd8ed1ab_0
 jinja2=3.1.2=pyhd8ed1ab_1
 markupsafe=2.1.1=py39hb82d6ee_1
-openssl=1.1.1o=h2bbff1b_0
+openssl=1.1.1l=h8ffe710_0
 pip=22.2.2=py39haa95532_0
 pyodbc=4.0.32=py39hd77b12b_1
 python=3.9.0=h6244533_2
