--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,82 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-ca-certificates=2022.9.24=h5b45459_0
+blas=1.0=mkl
+brotli=1.0.9=h8ffe710_7
+brotli-bin=1.0.9=h8ffe710_7
+brotlipy=0.7.0=py39h2bbff1b_1003
+ca-certificates=2022.4.26=haa95532_0
 cachelib=0.9.0=pyhd8ed1ab_0
-certifi=2022.9.24=pyhd8ed1ab_0
+certifi=2022.6.15=py39haa95532_0
+cffi=1.15.0=py39h2bbff1b_1
+charset-normalizer=2.0.4=pyhd3eb1b0_0
 click=8.1.3=win_pyhd8ed1ab_2
 colorama=0.4.6=pyhd8ed1ab_0
+cryptography=37.0.1=py39h21b164f_0
+cycler=0.11.0=pyhd8ed1ab_0
 flask=2.2.2=pyhd8ed1ab_0
 flask-caching=2.0.1=pyhd8ed1ab_0
 flask-cors=3.0.10=pyhd3eb1b0_0
+fonttools=4.25.0=pyhd3eb1b0_0
+freetype=2.10.4=h546665d_1
+icc_rt=2019.0.0=h0cc432a_1
+icu=68.2=h0e60522_0
+idna=3.3=pyhd3eb1b0_0
 importlib-metadata=5.1.0=pyha770c72_0
+intel-openmp=2021.4.0=haa95532_3556
 itsdangerous=2.1.2=pyhd8ed1ab_0
 jinja2=3.1.2=pyhd8ed1ab_1
+jpeg=9e=h8ffe710_2
+kiwisolver=1.4.4=py39h2e07f2f_0
+libbrotlicommon=1.0.9=h8ffe710_7
+libbrotlidec=1.0.9=h8ffe710_7
+libbrotlienc=1.0.9=h8ffe710_7
+libclang=11.1.0=default_h5c34c98_1
+libpng=1.6.37=h2a8f88b_0
+libtiff=4.0.9=h36446d0_1002
+libwebp=1.2.4=h8ffe710_0
+libwebp-base=1.2.4=h8ffe710_0
 markupsafe=2.1.1=py39hb82d6ee_1
-openssl=1.1.1l=h8ffe710_0
+matplotlib=3.5.3=py39hcbf5309_2
+matplotlib-base=3.5.3=py39h581301d_0
+mkl=2021.4.0=haa95532_640
+mkl-service=2.4.0=py39h2bbff1b_0
+mkl_fft=1.3.1=py39h277e83a_0
+mkl_random=1.2.2=py39hf11a4ad_0
+munkres=1.1.4=pyh9f0ad1d_0
+numpy=1.22.3=py39h7a0a035_0
+numpy-base=1.22.3=py39hca35cd5_0
+openssl=1.1.1o=h2bbff1b_0
+packaging=21.3=pyhd8ed1ab_0
+pillow=9.2.0=py39hdc2b20a_1
 pip=22.2.2=py39haa95532_0
+pycparser=2.21=pyhd3eb1b0_0
 pyodbc=4.0.32=py39hd77b12b_1
+pyopenssl=22.0.0=pyhd3eb1b0_0
+pyparsing=3.0.9=pyhd8ed1ab_0
+pyqt=5.12.3=py39hb0d2dfa_4
+pyqt5-sip=4.19.18=pypi_0
+pyqtchart=5.12=pypi_0
+pyqtwebengine=5.12.1=pypi_0
+pysocks=1.7.1=py39haa95532_0
 python=3.9.0=h6244533_2
+python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.9=2_cp39
+qt=5.12.9=h5909a2a_4
+requests=2.27.1=pyhd3eb1b0_0
+scipy=1.7.3=py39h0a974cb_0
 setuptools=65.5.0=py39haa95532_0
 six=1.16.0=pyhd3eb1b0_1
 sqlite=3.40.0=h2bbff1b_0
+tk=8.6.12=h8ffe710_0
+tornado=6.2=py39hb82d6ee_0
 tzdata=2022f=h04d1e81_0
+urllib3=1.26.9=py39haa95532_0
 vc=14.2=h21ff451_1
 vs2015_runtime=14.27.29016=h5e58377_2
 werkzeug=2.2.2=pyhd8ed1ab_0
 wheel=0.37.1=pyhd3eb1b0_0
+win_inet_pton=1.1.0=py39haa95532_0
 wincertstore=0.2=py39haa95532_2
 zipp=3.11.0=pyhd8ed1ab_0
+zlib=1.2.11=h8d14728_1011
